--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,113 @@
 <html>
-    <head>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-    </head>
-    <body>
-    <div>
-        <ul id="example-1">
-            <li v-for="item in items" :key="item.name"  v-on:click="pour(item.name)">
-              {{ item.name }}
-            </li>
-          </ul>
+
+<head>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <style>
+        body {
+            padding: 40px 0;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            grid-gap: 20px;
+            align-items: stretch;
+        }
+
+        .grid>article {
+            border: 1px solid #ccc;
+            box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+        }
+
+        .grid>article img {
+            max-width: 100%;
+        }
+
+        .grid .text {
+            padding: 20px;
+        }
+
+        .btn {
+            display: block;
+            font-weight: 400;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            border: 1px solid transparent;
+            padding: 0.375rem 0.75rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            border-radius: 0.25rem;
+            transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+            -webkit-appearance: button;
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        body {
+            position: relative
+        }
+
+        .pouring .pouring-loader {
+            display: block;
+        }
+
+        .pouring .btn {
+            display: none;
+        }
+
+        .pouring-loader {
+            display: none;
+            width: 400px;
+            height: 400px;
+            background-color: #fff;
+            position: absolute;
+            top: calc(50% - 200px);
+            left: calc(50% - 200px);
+            z-index: 9;
+            text-align: center;
+            font-size: 4rem;
+        }
+        .pouring-loader img {
+            -webkit-animation: shake 0.1s ease-in-out 0.1s infinite alternate;
+        }
+
+
+        @-webkit-keyframes shake {
+            from {
+                -webkit-transform: rotate(10deg);
+            }
+
+            to {
+                -webkit-transform-origin: center center;
+                -webkit-transform: rotate(-10deg);
+            }
+
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <main class="grid" id="example-1">
+            <article v-for="item in items" :key="item.name">
+                <img :src="item.image" alt={{item.image}}>
+                <div class="text">
+                    <h3>{{item.name}}</h3>
+                    <p>{{item.description}}</p>
+                    <button class="btn btn-primary btn-block" v-on:click="pour(item.name)">Order</button>
+                </div>
+            </article>
+
+        </main>
+    </div>
+    <div class="pouring-loader">
+        <img src="assets/shaker.jpeg" alt="">
     </div>
     <script type="text/javascript">
 
@@ -23,16 +122,18 @@
                     },
                     methods: {
                         pour: function (selection) {
+                            document.body.classList.add('pouring')
                             fetch(`http://localhost:3000/pour/${selection}`)
-                            .then(response => response.json())
-                            .then(data => {
-                                alert('Done')
-                            })
+                                .then(response => response.json())
+                                .then(data => {
+                                    document.body.classList.remove('pouring')
+                                })
                         }
                     }
                 })
             });
 
     </script>
-    </body>
+</body>
+
 </html>
