--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,8 @@
 
         .grid>article img {
             max-width: 100%;
+	    max-height: 300px;
+	    object-fit: cover;
         }
 
         .grid .text {
