--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <style>
         body {
+            position: relative;
             padding: 40px 0;
         }
 
@@ -14,15 +15,15 @@
             align-items: stretch;
         }
 
-        .grid>article {
+        .grid > article {
             border: 1px solid #ccc;
             box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
         }
 
-        .grid>article img {
-            max-width: 100%;
-	    max-height: 300px;
-	    object-fit: cover;
+        .grid > article img {
+            width: 100%;
+    	    height: 200px;
+    	    object-fit: cover;
         }
 
         .grid .text {
@@ -51,10 +52,6 @@
             border-color: #007bff;
         }
 
-        body {
-            position: relative
-        }
-
         .pouring .pouring-loader {
             display: block;
         }
@@ -75,6 +72,7 @@
             text-align: center;
             font-size: 4rem;
         }
+
         .pouring-loader img {
             -webkit-animation: shake 0.1s ease-in-out 0.1s infinite alternate;
         }
@@ -94,11 +92,13 @@
     </style>
 </head>
 
-<body>
+<body class="pouring">
     <div class="container">
         <main class="grid" id="example-1">
             <article v-for="item in items" :key="item.name">
-                <img :src="item.image" alt={{item.image}}>
+                <div class="img-container">
+                    <img :src="item.image" alt={{item.image}}>
+                </div>
                 <div class="text">
                     <h3>{{item.name}}</h3>
                     <p>{{item.description}}</p>
